[package]
name = "subshift"
version = "0.1.0"
edition = "2018"
authors = ["abhayk <abhay.krishnan.dev@gmail.com>"]
license = "MIT"
description = "A tool to add or subtract offsets to the timestamps in a .srt subtitle file"
homepage = "https://github.com/abhayk/subshift"
repository = "https://github.com/abhayk/subshift"
keywords = ["cli", "subtitle"]
categories = ["command-line-utilities"]

[dependencies]
clap = "3.0.0-beta.5"
anyhow = "1.0.44"
chrono = "0.4"
thiserror = "1.0"

[dev-dependencies]
test-case = "1.2.0"
assert_cmd = "2.0.2"
predicates = "2.0.3"